# PROVA-P1-SENAI

./: README.md
Q1/: pseudo.txt
Q2/: Dockerfile  README.md  compose.yaml
Q2/pkg_1/: CMakeLists.txt  package.xml
Q2/pkg_1/include/pkg_1/: RAMInformer.hpp
Q2/pkg_1/src/: RAMInformer.cpp
Q2/pkg_2/: package.xml  setup.cfg  setup.py
Q2/pkg_2/pkg_2/: sensor_reader.py
Q2/pkg_3/: CMakeLists.txt  package.xml
Q2/pkg_3/include/pkg_3/: prime_numbers.hpp
Q2/pkg_3/log/: latest_build
Q2/pkg_3/src/: prime_numbers.cpp
Q2/q2_interfaces/: CMakeLists.txt  package.xml
Q2/q2_interfaces/action/: PrimeNumber.action
Q2/q2_interfaces/msg/: Pkg1Interface.msg
Q2/q2_interfaces/srv/: SensorReaderClean.srv  SensorReaderData.srv
Q3/: README.md  test.py
Q3/lib/: Q3.py
